<resources>
    <string name="app_name">My ApplicationOne</string>
    <string name="app_nameone" />
    <string name="some_explanation_about_the_input">Some explanation about the input...</string>
    <string name="login_imageview">login imageview</string>
    <string name="sdsad">sdsad</string>
    <string name="hello_world" />
    <string name="login">Login</string>
    <string name="aaa">AAA</string>
    <string name="Username">username</string>
    <string name="Password">password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="signup">Signup</string>
</resources>
